Update Addon.java